# bit_tricks

./: .gitignore  CMakeLists.txt  README.md  generate_markdown_tables.py
.github/workflows/: cmake-multi-platform.yml
include/: bits.hpp
src/: benchmarks.cpp  unittests.cpp
